# sing-box-worker

./: .gitignore  CLAUDE.md  Cargo.toml  DEPLOY.md  README.md  README_EN.md  wrangler.toml
.github/workflows/: deploy.yml
src/: config.rs  error.rs  lib.rs  ui.html  utils.rs
src/parsers/: hysteria2.rs  mod.rs  shadowsocks.rs  trojan.rs  tuic.rs  vless.rs  vmess.rs
templates/: basic.json
